[project]
name = "grid-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.11.1",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "python-dotenv>=1.2.2",
]
